--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "framer-motion": "^4.1.17",
+    "immer": "^9.0.6",
     "next": "11.1.2",
     "prettier": "^2.3.2",
     "react": "17.0.2",
