videos page added

--- a/themeConfig.json
+++ b/themeConfig.json
@@ -3,6 +3,7 @@
   "textColorBase": "#142938",
   "textColorLight": "#597386",
   "textColorExtraLight": "#92a5b4",
+  "textColorGray": "#9fa1a4",
   "bgColorBase": "#ffffff",
   "bgColorLight": "#f6f7fa",
   "badgeTextColor": "#5232d2",
