--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "calendar-dates": "^2.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "framer-motion": "^4.1.17",
+    "howler": "^2.2.3",
     "immer": "^9.0.6",
     "next": "11.1.2",
     "prettier": "^2.3.2",
@@ -26,6 +28,7 @@
     "autoprefixer": "^10.3.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-plugin-react": "^7.25.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
