--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.0",
     "@reduxjs/toolkit": "^1.6.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "calendar-dates": "^2.7.0",
