--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "sharp": "^0.29.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
