bundle and img size

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@loadable/component": "^5.15.0",
@@ -25,10 +26,13 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "sharp": "^0.29.1"
+    "sharp": "^0.29.1",
+    "yarn": "^1.22.15"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^11.1.2",
     "autoprefixer": "^10.3.3",
+    "cross-env": "^7.0.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-plugin-react": "^7.25.1",
