timeline page added

--- a/data/config.json
+++ b/data/config.json
@@ -124,6 +124,10 @@
         {
           "name": "Webinars",
           "slug": "webinars"
+        },
+        {
+          "name": "Timelines",
+          "slug": "timelines"
         }
       ]
     }
