--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,35 +14,35 @@
     "@reduxjs/toolkit": "^1.6.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "calendar-dates": "^2.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "framer-motion": "^4.1.17",
     "howler": "^2.2.3",
     "immer": "^9.0.6",
-    "next": "11.1.2",
-    "prettier": "^2.3.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^14.2.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1",
-    "yarn": "^1.22.15"
+    "redux": "^4.1.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^11.1.2",
+    "@next/bundle-analyzer": "^14.2.14",
     "autoprefixer": "^10.3.3",
     "cross-env": "^7.0.3",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.14",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
+    "prettier": "^3.3.3",
     "sass": "^1.39.0",
     "tailwindcss": "^2.2.9"
   },
   "lint-staged": {
     "{pages,components}/**/*.{js,jsx}": "eslint . --fix",
     "{styles,components}/**/*.(s)?css": "prettier --write"
-  }
+  },
+  "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
 }
